# iso-deployment-bot

./: .editorconfig  .gitignore  README.md  README_PLEASE_READ.txt  distros.py  index.html  pyproject.toml  sync.sh  sync_script.py  อ่านผมก่อน!!!!!.txt
.github/workflows/: daily_sync.yml  deploy_pages.yml  link_health.yml  lint.yml
assets/: script.js  style.css
src/: distros.py
src/os_deployment_library/: distros.json  distros.py
src/os_deployment_library/scripts/: generate_index.py  sync.py  utils.py
src/os_deployment_library/templates/: index_template.html
src/scripts/: cleanup_db.py  generate_index.py  massive_distros.json  massive_distros_categorized.json  refactor.py  sync.py  top_distros.json  utils.py
src/templates/: index_template.html
tests/: test_checksums.py  test_db.py  test_generate.py  test_utils.py
tools/: categorize_local.py  check_links.py  check_updates.py  cleanup_db.py  fetch_checksums.py  fetch_descriptions_wikipedia.py  fetch_massive_distros.py  fetch_top_distros.py  refactor.py  sync.sh
web/: index.html
web/assets/: script.js  style.css
