[project]
name = "os-deployment-library"
version = "1.1.0"
description = "Automated ISO mirroring system for homelabs — GitHub Actions, aria2, rclone, Google Drive"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.ruff]
line-length = 200
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # line length handled separately

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
